link rel="canonical"を設定

--- a/src/_includes/top.njk
+++ b/src/_includes/top.njk
@@ -9,7 +9,7 @@
         <meta name="generator" content="{{ eleventy.generator }}" />
 		<title>みんなの食卓でありたい。</title>
         <link rel="stylesheet" href="/assets/bulma.min.css">
-        <link rel="manifest" href="manifest.json">
+        <link rel="canonical" href="https://wannabe.xn--2kr713n.xn--q9jyb4c/">
     </head>
     <body>
         <main class="hero is-fullheight">
