meta name="description"を設定

--- a/src/_includes/top.njk
+++ b/src/_includes/top.njk
@@ -2,7 +2,7 @@
 <html lang="ja" prefix="og: https://ogp.me/ns#">
     <head>
         <meta charset="UTF-8" />
-		<meta name="description" content="ボタンを押すと顔をなくせるかもしれない" />
+		<meta name="description" content="お金がなくても、一人でも家族でも、誰もが家に帰って安心して食卓を囲めるようなお店" />
 		<meta property="og:type" content="website" />
 		<meta property="og:title" content="みんなの食卓でありたい。" />
 		<meta name="viewport" content="width=device-width" />
