みんなの食卓へ向かうリンクを追加

--- a/src/_includes/components/footer.njk
+++ b/src/_includes/components/footer.njk
@@ -3,6 +3,9 @@
         <a class="column has-text-centered" href="/">
             トップ
         </a>
+        <a class="column has-text-centered" href="https://wannabe-syokutaku.osumiakari.jp/">
+            みんなの食卓へ向かう
+        </a>
     </div>
     <hr>
     <p>みんなの食卓でありたい。 by <a href="https://www.osumiakari.jp">Osumi Akari</a>（<a href="https://c.osumiakari.jp/@oageo">@oageo@c.osumiakari.jp</a>）。</p>
