--- a/src/_includes/components/footer.njk
+++ b/src/_includes/components/footer.njk
@@ -6,6 +6,9 @@
         <a class="column has-text-centered" href="https://wannabe-syokutaku.osumiakari.jp/">
             みんなの食卓へ向かう
         </a>
+        <a href="https://www.xn--2kr713n.xn--q9jyb4c">
+            その他のみんなの食卓
+        </a>
     </div>
     <hr>
     <p>みんなの食卓でありたい。 by <a href="https://www.osumiakari.jp">Osumi Akari</a>（<a href="https://c.osumiakari.jp/@oageo">@oageo@c.osumiakari.jp</a>）。</p>
