デザインを修正

--- a/src/_includes/components/footer.njk
+++ b/src/_includes/components/footer.njk
@@ -6,7 +6,7 @@
         <a class="column has-text-centered" href="https://wannabe-syokutaku.osumiakari.jp/">
             みんなの食卓へ向かう
         </a>
-        <a href="https://www.xn--2kr713n.xn--q9jyb4c">
+        <a class="column has-text-centered" href="https://www.xn--2kr713n.xn--q9jyb4c">
             その他のみんなの食卓
         </a>
     </div>
